Working on new NavigationService

--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/LiftStatusPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/LiftStatusPage.xaml
@@ -38,9 +38,12 @@
 
     <Grid>
 
-      <ListView ItemsSource="{Binding LiftGroups}"
-                GroupDisplayBinding="{Binding Title}"
-                Style="{StaticResource listViewStyle}">
+      <ListView
+        x:Name="listView"
+        ItemsSource="{Binding LiftGroups}"
+        SelectedItem="{Binding SelectedLift}"
+        GroupDisplayBinding="{Binding Title}"
+        Style="{StaticResource listViewStyle}">
         
         <ListView.ItemTemplate>
           <DataTemplate>
