--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/LiftDetailPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/LiftDetailPage.xaml
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:views="clr-namespace:SkiResort.XamarinApp.Views"
+             xmlns:ffil="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="SkiResort.XamarinApp.Pages.LiftDetailPage"
-             Title="Lift Detail">
+             Title="{Binding Lift.Name}">
   <ContentPage.Content>
-    <Label Text="Que paza neno" VerticalOptions="Center" HorizontalOptions="Center" />
+    <StackLayout Spacing="0">
+      <StackLayout Orientation="Horizontal" BackgroundColor="#105D82" Padding="15">
+        <Label Text="{Binding Lift.Name, StringFormat='You are too many miles away from {0}'}" VerticalOptions="Center" TextColor="White" FontSize="18" />
+      </StackLayout>
+      <views:WeatherWidget />
+      <ffil:CachedImage Source="map.jpg" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Aspect="AspectFill" />
+    </StackLayout>
   </ContentPage.Content>
   
 </ContentPage>
