Recover cachingstrategy in DiningPage

--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningPage.xaml
@@ -51,7 +51,7 @@
           x:Name="listView"
           ItemsSource="{Binding Restaurants}"
           SelectedItem="{Binding SelectedRestaurant, Mode=TwoWay}"
-          
+          CachingStrategy="RecycleElement"
           Style="{StaticResource listViewStyle}">
 
           <ListView.ItemTemplate>
