--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/RentalListPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/RentalListPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:SkiResort.XamarinApp.Views"
              xmlns:ffil="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
-             x:Class="SkiResort.XamarinApp.Pages.RentalPage"
-             Title="Rental Reservations">
+             x:Class="SkiResort.XamarinApp.Pages.RentalListPage"
+             Title="See my reservations">
 
   <ContentPage.Resources>
     <ResourceDictionary>
@@ -48,6 +48,7 @@
   </ContentPage.Resources>
 
   <ContentPage.Content>
+    
     <Grid>
       <ffil:CachedImage Style="{StaticResource backgroundImageStyle}" />
       
@@ -66,6 +67,7 @@
         <ActivityIndicator Color="White" IsRunning="{Binding Loading}" />
       </StackLayout>
     </Grid>
+    
   </ContentPage.Content>
 
 </ContentPage>
