--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/RentalFormPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/RentalFormPage.xaml
@@ -2,6 +2,6 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SkiResort.XamarinApp.Pages.RentalFormPage"
-             Title="Add a new reservation">
+             Title="Add new">
   <Label Text="Rental Form" VerticalOptions="Center" HorizontalOptions="Center" />
 </ContentPage>
