--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningDetailPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningDetailPage.xaml
@@ -22,47 +22,55 @@
         DownsampleToViewSize="True"
         Aspect="AspectFill"
         HeightRequest="200"/>
-      <StackLayout Padding="20" Spacing="15">
 
-        <StackLayout Spacing="0" Orientation="Horizontal">
-          <StackLayout Spacing="15" HorizontalOptions="FillAndExpand">
-            <StackLayout Spacing="5">
-              <Label Text="{Binding Restaurant.Name}" FontSize="20" TextColor="#1A90C9" />
-            </StackLayout>
-
-            <StackLayout Spacing="5">
-              <Label Text="Level of noise" FontSize="17" />
-              <Label Text="{Binding Restaurant.LevelOfNoise}" FontSize="14" />
-            </StackLayout>
-
-            <StackLayout Spacing="5">
-              <Label Text="Family friendly" FontSize="17" />
-              <Label Text="{Binding Restaurant.FamilyFriendly, Converter={StaticResource boolToString}}" FontSize="14" />
-            </StackLayout>
-          </StackLayout>
-          <StackLayout>
-            <ffil:CachedImage
-              WidthRequest="70"
-              HeightRequest="20"
-              Aspect="AspectFit"
-              DownsampleToViewSize="True"
-              HorizontalOptions="End"
-              Source="{Binding Restaurant.Rating, StringFormat='star_{0}.png'}" />
-            <views:PriceLevelView Value="{Binding Restaurant.PriceLevel}" HorizontalOptions="End" />
-          </StackLayout>
-        </StackLayout>
-
-        <StackLayout Spacing="5">
-          <Label Text="Address" FontSize="17" />
-          <Label Text="{Binding Restaurant.Address}" FontSize="14" />
-        </StackLayout>
-
-        <StackLayout Spacing="5">
-          <Label Text="Description" FontSize="17" />
-          <Label Text="{Binding Restaurant.Description}" FontSize="14" />
-        </StackLayout>
+      <ScrollView>
         
-      </StackLayout>
+        <StackLayout Padding="20" Spacing="15">
+        
+
+          <StackLayout Spacing="0" Orientation="Horizontal">
+            <StackLayout Spacing="15" HorizontalOptions="FillAndExpand">
+              <StackLayout Spacing="5">
+                <Label Text="{Binding Restaurant.Name}" FontSize="20" TextColor="#1A90C9" />
+              </StackLayout>
+
+              <StackLayout Spacing="5">
+                <Label Text="Level of noise" FontSize="17" />
+                <Label Text="{Binding Restaurant.LevelOfNoise}" FontSize="14" />
+              </StackLayout>
+
+              <StackLayout Spacing="5">
+                <Label Text="Family friendly" FontSize="17" />
+                <Label Text="{Binding Restaurant.FamilyFriendly, Converter={StaticResource boolToString}}" FontSize="14" />
+              </StackLayout>
+            </StackLayout>
+            <StackLayout>
+              <ffil:CachedImage
+                WidthRequest="70"
+                HeightRequest="20"
+                Aspect="AspectFit"
+                DownsampleToViewSize="True"
+                HorizontalOptions="End"
+                Source="{Binding Restaurant.Rating, StringFormat='star_{0}.png'}" />
+              <views:PriceLevelView Value="{Binding Restaurant.PriceLevel}" HorizontalOptions="End" />
+            </StackLayout>
+          </StackLayout>
+
+          <StackLayout Spacing="5">
+            <Label Text="Address" FontSize="17" />
+            <Label Text="{Binding Restaurant.Address}" FontSize="14" />
+          </StackLayout>
+
+          <StackLayout Spacing="5">
+            <Label Text="Description" FontSize="17" />
+            <Label Text="{Binding Restaurant.Description}" FontSize="14" />
+          </StackLayout>
+          
+        
+        
+        </StackLayout>
+
+      </ScrollView>
 
     </StackLayout>
   </ContentPage.Content>
